Got Rid of ScrollBar & Fixed Back button

--- a/Public/styles/classes.css
+++ b/Public/styles/classes.css
@@ -101,6 +101,27 @@ input {
 	overflow-y: scroll;
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: var(--classes-bg);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--text);
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: red;
+}
+
 .classList {
 	margin-left: 20%;
 }
